test/errors/ifBranches.chpl
var b : bool;
var y = if b then 42 else "hello";

var z =
  if b
  then 42
  else "hello";

var w = if b then int else string;

var v = if b then int else 1;
